package io.github.tnas.introspectorfilter.model;

import io.github.tnas.introspectorfilter.annotation.Filterable;

public class Author {

	private long id;
	
	@Filterable
	private String name;

	@Filterable
	private Address address;

	public Author(long id, String name, Address address) {
		this.id = id;
		this.name = name;
		this.address = address;
	}

	public long getId() {
		return id;
	}

	public void setId(long id) {
		this.id = id;
	}

	public String getName() {
		return name;
	}

	public void setName(String name) {
		this.name = name;
	}

	public Address getAddress() {
		return address;
	}

	public void setAddress(Address address) {
		this.address = address;
	}

	@Override
	public String toString() {
		return "Author [id=" + id + ", name=" + name + ", address=" + address + "]";
	}
}
